syntax = "proto3";

package chat_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/Oleg-Pro/chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);    
    rpc SendMessage(SendMessageRequest) returns(google.protobuf.Empty);
    rpc Connect (ConnectRequest) returns (stream Message);    
}

message CreateRequest {
    repeated string user_names = 1;
}

message CreateResponse {
    int64 id = 1;
};


message DeleteRequest {
    int64 id = 1;
}


message ConnectRequest {
    int64 chatId = 1;
    string username = 2;
}

message SendMessageRequest {
    int64 chatId = 1;
    Message message = 2;
}

message Message {
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp created_at = 3;
  }
  